--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.0",
+    "aos": "^2.3.4",
     "flowbite": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
